--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ body {
 	Left: 50px;
 	top: 10%;
 	font-size: 40px;
+	background-color: #bfbfbf;
 }
 
 .container {
     height: 100%;
     width: 0%;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
     background-color: blue;
@@ -43,10 +44,22 @@ body {
     padding-top: 10px;
 }
 
-#sidebar .closebutton {
+#sidebar a {
+	padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+#sidebar a:hover {
+	color: #f1f1f1;
+}
+
+#sidebar a {
     position: absolute;
     top: 5%;
-    z-index: 10;
     right: 25px;
     font-size: 36px;
     margin-left: 5px;
@@ -54,5 +67,5 @@ body {
 
 @media screen and (max-height: 450px) {
   .container {padding-top: 15px;}
-  .sidenav .header {font-size: 18px;}
+  #sidebar a {font-size: 18px;}
 }
