--- a/css/style.css
+++ b/css/style.css
@@ -18,56 +18,45 @@ body {
 	height: 200px;
 }
 
-
-
-.main {
-	transition: margin-left .5s;
-	padding: 5px;
-	position: absolute;
-	z-index: 5;
-	Left: 50px;
-	top: 10%;
-	font-size: 40px;
-	background-color: #bfbfbf;
-}
-
-.container {
+.containerBox {
+    background: white;
     height: 100%;
-    width: 0%;
+    width: 20%;
+    top: 80px;
     position: fixed;
     z-index: 10;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 10px;
 }
 
-.container a {
-	padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    color: white;
-    display: block;
-    transition: 0.3s;
-    font-size: 25px;
+#hide-unhide {
+    background: #ebe6e3;
+    top: 50px;
+    left: 10px;
+    position: relative;
+    z-index: 20;
+    height 100%;
+    width: 100px;
 }
 
-.container a:hover {
-	color: #ffffff;
+.locationSidebar {
+    background: #fff;
+    border: 1px solid #999;
+    border-radius: 3px;
+    height: 100%;
+    line-height: 35px;
+    padding: 10px 10px 30px 10px;
+    text-align: left;
+    width: 340px;
 }
 
-.container .closebutton {
-    position: absolute;
-    font-size: 20px;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-right: 50px;
-    color: white;
+hr {
+    height: 1px;
+    margin-right: auto;
+    margin-left: auto;
+    border-style: inset;
 }
 
 @media screen and (max-height: 450px) {
   .container {padding-top: 15px;}
-  #sidebar a {font-size: 25px;}
+  #sidebar {font-size: 18px;}
 }
