--- a/css/style.css
+++ b/css/style.css
@@ -38,16 +38,15 @@ body {
     width: 100px;
 }
 
-.locationSidebar {
-    background: #fff;
-    border: 1px solid #999;
-    border-radius: 3px;
-    height: 100%;
-    line-height: 35px;
-    padding: 10px 10px 30px 10px;
-    text-align: left;
-    width: 340px;
+.casinoButton {
+    background: #e6ffff;
+    color: black;
+    border: 1px solid #008CBA; 
+    height: 20px;
+    width: 200px;
+    text
 }
+
 
 hr {
     height: 1px;
